--- a/package.json
+++ b/package.json
@@ -2,15 +2,21 @@
   "name": "l3-v2-build-podcast-generator",
   "version": "1.0.0",
   "description": "<img src=\"./assets/podcast.png\" alt=\"PodAI Creator Logo\" width=\"750\">",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "ffmpeg-static": "^5.2.0",
+    "fluent-ffmpeg": "^2.1.3",
     "multer": "^1.4.5-lts.1"
   }
 }
