--- a/podcast-generator-backend/package.json
+++ b/podcast-generator-backend/package.json
@@ -18,7 +18,8 @@
     "express": "^4.21.2",
     "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.3",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "open": "^10.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
