--- a/podcast-generator-backend/package.json
+++ b/podcast-generator-backend/package.json
@@ -19,7 +19,8 @@
     "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.3",
     "multer": "^1.4.5-lts.1",
-    "open": "^10.1.0"
+    "open": "^10.1.0",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
