--- a/podcast-generator-backend/package.json
+++ b/podcast-generator-backend/package.json
@@ -12,14 +12,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@google/generative-ai": "^0.21.0",
+    "audio-buffer-from": "^1.1.1",
+    "axios": "^1.7.9",
+    "buffer-to-stream": "^1.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.3",
+    "memory-streams": "^0.1.3",
     "multer": "^1.4.5-lts.1",
     "open": "^10.1.0",
+    "stream-buffers": "^3.0.3",
     "uuid": "^11.0.5"
   },
   "devDependencies": {
